[gd_scene load_steps=10 format=3 uid="uid://sc7wi5w05tub"]

[ext_resource type="Script" uid="uid://cvd6kfu2tirhr" path="res://Ninja.gd" id="1_jrjp1"]
[ext_resource type="PackedScene" uid="uid://dyk8c606afekx" path="res://NinjaStar.tscn" id="2_4bvku"]
[ext_resource type="AudioStream" uid="uid://xjwqq85m3s6d" path="res://Sound Effects/Ouch.mp3" id="2_32v62"]
[ext_resource type="AudioStream" uid="uid://dapdbw3qlljce" path="res://Sound Effects/I_died.mp3" id="3_4bvku"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4gyqm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qi2p4"]

[sub_resource type="TorusMesh" id="TorusMesh_32v62"]

[sub_resource type="BoxShape3D" id="BoxShape3D_epg4t"]
size = Vector3(1.36768, 1.53223, 1.03015)

[sub_resource type="SphereShape3D" id="SphereShape3D_qi2p4"]
radius = 4.42203

[node name="Ninja" type="CharacterBody3D"]
transform = Transform3D(0.0225478, 0, 0.999746, 0, 1, 0, -0.999746, 0, 0.0225478, 0, 0, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_jrjp1")
ninja_star_scene = ExtResource("2_4bvku")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_4gyqm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qi2p4")

[node name="Star" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.0493293, -0.120277, 0, 0.120277, -0.0493293, 0, 0, 0, 0.13, 0.567, 0.163, -0.085)
mesh = SubResource("TorusMesh_32v62")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.16161, 0, 0.00364487)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.183838, 0.0620117, 0.0150757)
shape = SubResource("BoxShape3D_epg4t")

[node name="HitSoundPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_32v62")

[node name="DeathSoundPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_4bvku")

[node name="VisionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0)
shape = SubResource("SphereShape3D_qi2p4")

[node name="RayCast3D" type="RayCast3D" parent="."]

[node name="StateTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="AttackSpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0149398, 0, -0.662414)

[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
